--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -9,9 +9,9 @@ const { date } = Astro.props;
 <time datetime={date.toISOString()}>
   {
     date.toLocaleDateString("en-us", {
-      year: "numeric",
-      month: "short",
+      month: "long",
       day: "numeric",
+      year: "numeric",
     })
   }
 </time>
