--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,24 +1,16 @@
 ---
-import type { HTMLAttributes } from "astro/types";
+type Props = {
+  href: string;
+};
 
-type Props = HTMLAttributes<"a">;
-
-const { href, class: className, ...props } = Astro.props;
-
+const { href } = Astro.props;
 const { pathname } = Astro.url;
 const isActive = href === pathname || href === pathname.replace(/\/$/, "");
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a
+  href={href}
+  class:list={["hover:underline", isActive && "font-bold underline"]}
+>
   <slot />
 </a>
-<style>
-  a {
-    display: inline-block;
-    text-decoration: none;
-  }
-  a.active {
-    font-weight: bolder;
-    text-decoration: underline;
-  }
-</style>
