--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,66 +1,24 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-import { Button } from "../components/ui/button/snippet";
+import RootLayout from "../layouts/RootLayout.astro";
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <Header title={SITE_TITLE} />
-    <main>
-      <h1>🧑‍🚀 Hello, Astronaut!</h1>
-      <Button>Hello World</Button>
-      <p>
-        Welcome to the official <a href="https://astro.build/">Astro</a> blog
-        starter template. This template serves as a lightweight,
-        minimally-styled starting point for anyone looking to build a personal
-        website, blog, or portfolio with Astro.
-      </p>
-      <p>
-        This template comes with a few integrations already configured in your
-        <code>astro.config.mjs</code> file. You can customize your setup with
-        <a href="https://astro.build/integrations">Astro Integrations</a> to add
-        tools like Tailwind, React, or Vue to your project.
-      </p>
-      <p>Here are a few ideas on how to get started with the template:</p>
-      <ul>
-        <li>Edit this page in <code>src/pages/index.astro</code></li>
-        <li>
-          Edit the site header items in <code>src/components/Header.astro</code>
-        </li>
-        <li>
-          Add your name to the footer in <code>src/components/Footer.astro</code
-          >
-        </li>
-        <li>
-          Check out the included blog posts in <code>src/pages/blog/</code>
-        </li>
-        <li>
-          Customize the blog post page layout in <code
-            >src/layouts/BlogPost.astro</code
-          >
-        </li>
-      </ul>
-      <p>
-        Have fun! If you get stuck, remember to <a
-          href="https://docs.astro.build/"
-          >read the docs
-        </a> or <a href="https://astro.build/chat">join us on Discord</a> to ask
-        questions.
-      </p>
-      <p>
-        Looking for a blog template with a bit more personality? Check out <a
-          href="https://github.com/Charca/astro-blog-template"
-          >astro-blog-template
-        </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-      </p>
-    </main>
-    <Footer />
-  </body>
-</html>
+<RootLayout>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro aspernatur,
+    quae neque, aliquid modi tempore eaque dicta debitis provident libero
+    voluptas, quod impedit tempora. Maiores molestias voluptatibus expedita.
+    Impedit sed velit rem minima dolorum quae cum consectetur repellat dicta
+    adipisci! Voluptatem illum voluptas nisi cum necessitatibus. Perferendis
+    sint, alias reiciendis, omnis ratione voluptatum possimus libero nisi
+    officia dolorem qui modi a laborum corrupti nostrum nulla, obcaecati
+    veritatis quod aperiam! Voluptatum suscipit vel fugiat animi. Blanditiis
+    laboriosam quasi recusandae vero eos! Quidem pariatur obcaecati velit vitae
+    tempore vel eos. Magnam excepturi nemo accusantium id, assumenda beatae
+    incidunt quos! Ratione pariatur distinctio quis ipsam iure nostrum
+    repellendus? Veniam voluptatem nihil, accusamus maxime sequi enim? Sunt
+    possimus, harum laudantium sint soluta ex modi ipsa asperiores dolor ullam
+    unde aliquid! Vitae a tempora voluptas beatae pariatur nesciunt ab at enim
+    facere. Sapiente, quaerat facilis at accusantium reprehenderit, quo magnam
+    harum tenetur perspiciatis voluptas tempora.
+  </p>
+</RootLayout>
