--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const today = new Date();
 ---
 
-<div class="mt-auto border-t border-black">
+<div class="mt-auto border-t border-black bg-white">
   <footer
     class="mx-auto flex max-w-3xl items-center justify-between gap-6 px-4 pb-4 pt-4 font-mono text-sm sm:px-6 lg:px-8"
   >
