--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -19,7 +19,7 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
       description={description}
     />
   </head>
-  <body class="flex min-h-screen flex-col overflow-y-scroll">
+  <body class="flex min-h-[100dvh] min-h-screen flex-col overflow-y-scroll">
     <Header title={title} />
     <slot name="banner" />
     <main class="mx-auto w-full max-w-3xl px-4 sm:px-6 lg:px-8">
