more scaffolding and blog list

--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -10,7 +10,7 @@ const { date } = Astro.props;
   {
     date.toLocaleDateString("en-us", {
       month: "long",
-      day: "numeric",
+      day: "2-digit",
       year: "numeric",
     })
   }
