--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -6,7 +6,7 @@ type Props = {
 const { text } = Astro.props;
 ---
 
-<div class="bg-wavy-pattern border-b border-black">
+<div class="border-b border-black">
   <div class="mx-auto max-w-3xl px-4 py-14 sm:px-6 lg:px-8">
     <h1 class="font-mono text-6xl font-bold">{text.toUpperCase()}</h1>
   </div>
