--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,16 +1,17 @@
 ---
-// TODO - file issue (this is not required it seems)
-// import "@park-ui/tailwind-plugin/preset.css";
-
-interface Props {
+type Props = {
   title: string;
   description: string;
   image?: string;
-}
+};
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
+const {
+  title,
+  description,
+  image = "/blog-placeholder-about.jpg",
+} = Astro.props;
 
 import { ViewTransitions } from "astro:transitions";
 ---
