add temporary patterns to banner

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,7 +1,7 @@
 ---
 type Props = {
   text: string;
-  bg?: "bg-wavy-pattern";
+  bg?: "bg-wavy-pattern" | "bg-zigzag-pattern";
 };
 
 const { text, bg } = Astro.props;
