--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import RootLayout from "../layouts/RootLayout.astro";
 ---
 
 <RootLayout title={ABOUT_TITLE} description={ABOUT_DESCRIPTION}>
-  <Banner text="About" slot="banner" />
+  <Banner text="About" slot="banner" bg="bg-zigzag-pattern" />
   <p>
     All about me. Goes into depth, timeline, skills, not all work related
     things.
