--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 const today = new Date();
 ---
 
-<div class="mt-auto border-t border-black bg-white">
-  <footer
+<footer class="mt-auto border-t border-black bg-white">
+  <div
     class="mx-auto flex max-w-3xl items-center justify-between gap-6 px-4 pb-4 pt-4 font-mono text-sm sm:px-6 lg:px-8"
   >
     <p class="whitespace-nowrap">&copy; Joe Petrillo - {today.getFullYear()}</p>
@@ -45,5 +45,5 @@ const today = new Date();
         >
       </a>
     </div>
-  </footer>
-</div>
+  </div>
+</footer>
