--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -24,7 +24,7 @@ const posts = await Promise.all(
 
 <RootLayout title={BLOG_TITLE} description={BLOG_DESCRIPTION}>
   <Banner text="Blog" slot="banner" bg="bg-wavy-pattern" />
-  <p class="mt-10">{BLOG_DESCRIPTION}</p>
+  <p class="mt-10 leading-7 text-zinc-700">{BLOG_DESCRIPTION}</p>
   <ul class="mb-20 mt-6 space-y-4 divide-y divide-zinc-100">
     {
       posts.map((post) => (
@@ -34,8 +34,8 @@ const posts = await Promise.all(
               {post.data.title}
             </a>
           </h4>
-          <div class="xs:flex-row flex flex-col justify-between font-mono text-sm text-zinc-500">
-            <span class="self-start bg-zinc-50 p-0.5 text-zinc-500">
+          <div class="flex flex-col justify-between font-mono text-sm text-zinc-500 xs:flex-row">
+            <span class="self-start bg-zinc-50 p-0.5">
               <FormattedDate date={post.data.pubDate} />
             </span>
             <p class="self-start bg-zinc-50 p-0.5">{post.data.readingTime}</p>
