--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,7 +10,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const {
   title,
   description,
-  image = "/blog-placeholder-about.jpg",
+  image = "/images/placeholder.jpg",
 } = Astro.props;
 
 import { ViewTransitions } from "astro:transitions";
