Refactor pill component and add it to blog post and blog index pages

--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -1,11 +1,16 @@
 ---
 type Props = {
-  content: string;
-}
+  italic?: boolean;
+};
 
-const { content } = Astro.props;
+const { italic } = Astro.props;
 ---
 
-<span class="bg-blue-500 text-white rounded-full py-1 px-4">
-  {content}
-</span>
+<div
+  class:list={[
+    "rounded-sm bg-zinc-100 px-1.5 py-0.5 font-mono text-sm text-zinc-500",
+    italic && "italic",
+  ]}
+>
+  <slot />
+</div>
