--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,6 +2,7 @@
 import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import RootLayout from "./RootLayout.astro";
+import Pill from "../components/Pill.astro";
 
 type Props = CollectionEntry<"blog">["data"] & {
   readingTime: string;
@@ -19,17 +20,15 @@ const { title, description, pubDate, updatedDate, readingTime } = Astro.props;
       <div
         class="mt-4 flex flex-wrap items-center justify-between gap-x-4 gap-y-1 text-zinc-500"
       >
-        <FormattedDate date={pubDate} />
+        <Pill><FormattedDate date={pubDate} /></Pill>
         {
           updatedDate && (
-            <p class="italic">
+            <Pill italic>
               Last Updated <FormattedDate date={updatedDate} />
-            </p>
+            </Pill>
           )
         }
       </div>
-      <p class="mt-1 text-zinc-500">
-        {readingTime}
     </div>
     <div class="prose prose-zinc max-w-3xl">
       <slot />
