--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,6 +4,7 @@ import FormattedDate from "../../components/FormattedDate.astro";
 import RootLayout from "../../layouts/RootLayout.astro";
 import Banner from "../../components/Banner.astro";
 import { BLOG_DESCRIPTION, BLOG_TITLE } from "../../consts";
+import Pill from "../../components/Pill.astro";
 
 const postsCollection = await getCollection("blog");
 const posts = await Promise.all(
@@ -34,11 +35,11 @@ const posts = await Promise.all(
               {post.data.title}
             </a>
           </h4>
-          <div class="flex flex-col justify-between font-mono text-sm text-zinc-500 xs:flex-row">
-            <span class="self-start bg-zinc-50 p-0.5">
+          <div class="flex flex-col items-start justify-between gap-y-1 font-mono text-sm xs:flex-row xs:items-center">
+            <Pill>
               <FormattedDate date={post.data.pubDate} />
-            </span>
-            <p class="self-start bg-zinc-50 p-0.5">{post.data.readingTime}</p>
+            </Pill>
+            <Pill>{post.data.readingTime}</Pill>
           </div>
         </li>
       ))
