--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,11 +7,7 @@ type Props = {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const {
-  title,
-  description,
-  image = "/images/placeholder.jpg",
-} = Astro.props;
+const { title, description, image = "/images/placeholder.jpg" } = Astro.props;
 
 import { ViewTransitions } from "astro:transitions";
 ---
