--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import { ROOT_TITLE } from "../consts";
 const { pathname } = Astro.url;
 ---
 
-<header class="sticky top-0 border-b border-black bg-white shadow-md">
+<header class="sticky top-0 z-50 border-b border-black bg-white shadow-md">
   <div class="mx-auto max-w-3xl px-4 pb-4 pt-4 font-mono sm:px-6 lg:px-8">
     <nav class="flex items-center justify-between gap-6">
       <h2
