--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -7,7 +7,7 @@ type Props = {
 const { text, bg } = Astro.props;
 ---
 
-<div class:list={["border-b border-black", bg]}>
+<div class:list={["border-b border-black bg-repeat", bg]}>
   <div class="mx-auto max-w-3xl px-4 py-14 sm:px-6 lg:px-8">
     <h1 class="font-mono text-6xl font-bold">{text.toUpperCase()}</h1>
   </div>
