--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -8,7 +8,7 @@ const { italic } = Astro.props;
 
 <div
   class:list={[
-    "rounded-sm bg-zinc-100 px-1.5 py-0.5 font-mono text-sm text-zinc-500",
+    "inline-block rounded-sm bg-zinc-100 px-1.5 py-1.5 font-mono text-sm text-zinc-600",
     italic && "italic",
   ]}
 >
