--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,18 +14,21 @@ const { title, description, pubDate, updatedDate, readingTime } = Astro.props;
 <RootLayout title={title} description={description}>
   <article class="mb-20 mt-10">
     <div class="mb-10 border-b border-black pb-4">
-      <h1 class="text-3xl font-extrabold sm:text-4xl md:text-5xl">
+      <h1 class="text-3xl font-bold sm:text-4xl md:text-5xl">
         {title}
       </h1>
       <div
-        class="mt-4 flex flex-wrap items-center justify-between gap-x-4 gap-y-1 text-zinc-500"
+        class="mt-4 flex flex-wrap items-center justify-between gap-x-2 gap-y-2 text-zinc-500"
       >
         <Pill><FormattedDate date={pubDate} /></Pill>
+        <Pill>{readingTime}</Pill>
         {
           updatedDate && (
-            <Pill italic>
-              Last Updated <FormattedDate date={updatedDate} />
-            </Pill>
+            <div class="w-full">
+              <Pill>
+                Last updated <FormattedDate date={updatedDate} />
+              </Pill>
+            </div>
           )
         }
       </div>
