--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -8,7 +8,8 @@ type Props = CollectionEntry<"blog">["data"] & {
   readingTime: string;
 };
 
-const { title, description, pubDate, updatedDate, readingTime } = Astro.props;
+const { title, description, publishedDate, updatedDate, readingTime } =
+  Astro.props;
 ---
 
 <RootLayout title={title} description={description}>
@@ -20,7 +21,7 @@ const { title, description, pubDate, updatedDate, readingTime } = Astro.props;
       <div
         class="mt-4 flex flex-wrap items-center justify-between gap-x-2 gap-y-2 text-zinc-500"
       >
-        <Pill><FormattedDate date={pubDate} /></Pill>
+        <Pill><FormattedDate date={publishedDate} /></Pill>
         <Pill>{readingTime}</Pill>
         {
           updatedDate && (
