--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,7 +9,9 @@ import Pill from "../../components/Pill.astro";
 const postsCollection = await getCollection("blog");
 const posts = await Promise.all(
   postsCollection
-    .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+    .sort(
+      (a, b) => b.data.publishedDate.valueOf() - a.data.publishedDate.valueOf(),
+    )
     .map(async (post) => {
       const { remarkPluginFrontmatter } = await post.render();
       return {
@@ -78,7 +80,7 @@ const posts = await Promise.all(
           </h4>
           <div class="flex flex-col items-start justify-between gap-y-2 text-sm xs:flex-row xs:items-center">
             <Pill>
-              <FormattedDate date={post.data.pubDate} />
+              <FormattedDate date={post.data.publishedDate} />
             </Pill>
             <Pill>{post.data.readingTime}</Pill>
           </div>
