--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,36 +2,24 @@
 import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import RootLayout from "./RootLayout.astro";
-import Pill from "../components/Pill.astro";
+import MetaInfo from "../components/MetaInfo.astro";
 
 type Props = CollectionEntry<"blog">["data"] & {
   readingTime: string;
 };
 
-const { title, description, publishedDate, updatedDate, readingTime } =
-  Astro.props;
+const { title, description, date, readingTime } = Astro.props;
 ---
 
 <RootLayout title={title} description={description}>
   <article class="mb-20 mt-10">
-    <div class="mb-10 border-b border-black pb-4">
-      <h1 class="text-3xl font-bold sm:text-4xl md:text-5xl">
+    <div class="mb-10">
+      <h1 class="text-balance text-3xl font-bold">
         {title}
       </h1>
-      <div
-        class="mt-4 flex flex-wrap items-center justify-between gap-x-2 gap-y-2 text-zinc-500"
-      >
-        <Pill><FormattedDate date={publishedDate} /></Pill>
-        <Pill>{readingTime}</Pill>
-        {
-          updatedDate && (
-            <div class="w-full">
-              <Pill>
-                Last updated <FormattedDate date={updatedDate} />
-              </Pill>
-            </div>
-          )
-        }
+      <div class="mt-3 flex flex-wrap items-center gap-x-8 gap-y-4">
+        <MetaInfo icon="date"><FormattedDate date={date} /></MetaInfo>
+        <MetaInfo icon="time">{readingTime}</MetaInfo>
       </div>
     </div>
     <div class="prose prose-zinc max-w-3xl">
