--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,14 +4,12 @@ import FormattedDate from "../../components/FormattedDate.astro";
 import RootLayout from "../../layouts/RootLayout.astro";
 import Banner from "../../components/Banner.astro";
 import { BLOG_DESCRIPTION, BLOG_TITLE } from "../../consts";
-import Pill from "../../components/Pill.astro";
+import MetaInfo from "../../components/MetaInfo.astro";
 
 const postsCollection = await getCollection("blog");
 const posts = await Promise.all(
   postsCollection
-    .sort(
-      (a, b) => b.data.publishedDate.valueOf() - a.data.publishedDate.valueOf(),
-    )
+    .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
     .map(async (post) => {
       const { remarkPluginFrontmatter } = await post.render();
       return {
@@ -28,61 +26,20 @@ const posts = await Promise.all(
 <RootLayout title={BLOG_TITLE} description={BLOG_DESCRIPTION}>
   <Banner text="Blog" slot="banner" bg="bg-wavy-pattern" />
   <p class="mt-10 leading-7 text-zinc-700">{BLOG_DESCRIPTION}</p>
-
-  <!-- <form class="mt-10 max-w-md">
-    <label
-      for="default-search"
-      class="sr-only mb-2 text-sm font-medium text-gray-900 dark:text-white"
-      >Search</label
-    >
-    <div class="relative">
-      <div
-        class="pointer-events-none absolute inset-y-0 start-0 flex items-center ps-3"
-      >
-        <svg
-          class="h-4 w-4 text-gray-500 dark:text-gray-400"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 20 20"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"></path>
-        </svg>
-      </div>
-      <input
-        type="search"
-        id="default-search"
-        class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-4 ps-10 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
-        placeholder="Search"
-        required
-      />
-      <button
-        type="submit"
-        class="absolute bottom-2.5 end-2.5 rounded-lg bg-gray-700 px-4 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >Search</button
-      >
-    </div>
-  </form> -->
-
-  <ul class="mb-20 mt-6 space-y-4 divide-y divide-zinc-100">
+  <ul class="mb-20 mt-6 space-y-6 divide-y divide-zinc-200">
     {
       posts.map((post) => (
-        <li class="pt-4">
-          <h4 class="mb-2 text-lg font-medium">
-            <a href={`/blog/${post.slug}`} class="break-words hover:underline">
+        <li class="pt-6">
+          <h4 class="mb-2 text-balance text-lg font-medium">
+            <a href={`/blog/${post.slug}`} class="hover:underline">
               {post.data.title}
             </a>
           </h4>
-          <div class="flex flex-col items-start justify-between gap-y-2 text-sm xs:flex-row xs:items-center">
-            <Pill>
-              <FormattedDate date={post.data.publishedDate} />
-            </Pill>
-            <Pill>{post.data.readingTime}</Pill>
+          <div class="flex flex-col items-start justify-between gap-y-4 xs:flex-row xs:items-center">
+            <MetaInfo icon="date">
+              <FormattedDate date={post.data.date} />
+            </MetaInfo>
+            <MetaInfo icon="time">{post.data.readingTime}</MetaInfo>
           </div>
         </li>
       ))
