--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -22,7 +22,7 @@ const { title, description, date, readingTime } = Astro.props;
         <MetaInfo icon="time">{readingTime}</MetaInfo>
       </div>
     </div>
-    <div class="prose prose-zinc max-w-3xl">
+    <div class="prose prose-zinc max-w-3xl dark:prose-invert">
       <slot />
     </div>
   </article>
