--- a/src/components/MetaInfo.astro
+++ b/src/components/MetaInfo.astro
@@ -6,7 +6,7 @@ type Props = {
 const { icon } = Astro.props;
 ---
 
-<div class="flex items-center gap-1 font-mono text-xs text-zinc-700">
+<div class="flex items-start gap-1 font-mono text-xs text-zinc-700">
   {
     icon === "date" && (
       <svg
